--- a/SitePai2/SitePai2/Views/Home/Index.cshtml
+++ b/SitePai2/SitePai2/Views/Home/Index.cshtml
@@ -106,8 +106,8 @@
     <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-                    <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/src2/img/portfolio/fullsize/1.jpg">
+                    <img class="img-fluid" src="~/Content/src2/img/portfolio/thumbnails/1.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -121,8 +121,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-                    <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/src2/img/portfolio/fullsize/2.jpg">
+                    <img class="img-fluid" src="~/Content/src2/img/portfolio/thumbnails/2.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -136,8 +136,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-                    <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/src2/img/portfolio/fullsize/3.jpg">
+                    <img class="img-fluid" src="~/Content/src2/img/portfolio/thumbnails/3.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -151,8 +151,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-                    <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/src2/img/portfolio/fullsize/4.jpg">
+                    <img class="img-fluid" src="~/Content/src2/img/portfolio/thumbnails/4.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -166,8 +166,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-                    <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/src2/img/portfolio/fullsize/5.jpg">
+                    <img class="img-fluid" src="~/Content/src2/img/portfolio/thumbnails/5.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -181,8 +181,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-                    <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+                <a class="portfolio-box" href="~/Content/src2/img/portfolio/fullsize/6.jpg">
+                    <img class="img-fluid" src="~/Content/src2/img/portfolio/thumbnails/6.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -196,6 +196,13 @@
                 </a>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="bg-dark text-white">
+    <div class="container text-center">
+        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
     </div>
 </section>
 
